[gd_scene load_steps=4 format=2]

[ext_resource path="res://white_rect_1x1.png" type="Texture" id=1]
[ext_resource path="res://Canvas/FrameButton.gd" type="Script" id=2]
[ext_resource path="res://Canvas/Layer.tscn" type="PackedScene" id=3]

[node name="FrameButton" type="TextureRect"]
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 1 )
expand = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer" parent="." instance=ExtResource( 3 )]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 0.0
margin_bottom = 0.0
expand = true
minimap_layer = true

[node name="CurrentFrameSign" type="TextureRect" parent="."]
self_modulate = Color( 0.298039, 0.0470588, 0.996078, 1 )
anchor_right = 1.0
margin_bottom = 1.0
rect_min_size = Vector2( 0, 7 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
[connection signal="gui_input" from="." to="." method="_on_FrameButton_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
